--- a/css/style.css
+++ b/css/style.css
@@ -265,16 +265,182 @@ h3 { font-size: var(--fs-h3)}
 .projects {
   background-color: var(--clr-accent);
   max-height: 1500px;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 70px;
   color: black;
 }
 
-.card {
-  border-color: black;
+.project-heading {
+  font-family: var(--ff-secondary);
+  font-size: 1.5vw;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 0px;
 }
 
-.card-title {
-  font-family: var(--ff-secondary);
-  font-size: 1.15rem;
+
+.flip-card {
+  background-color: transparent;
+  width: 240px;
+  height: 240px;
+  /* border: 1px solid black; */
+  perspective: 1000px; 
 }
+
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; 
+  backface-visibility: hidden;
+
+}
+
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+  width: 240px;
+  height: 240px;
+}
+
+
+.flip-card-back {
+  background-color: white;
+  color: black;
+  transform: rotateY(180deg);
+  width: 240px;
+  height: 240px;
+  padding-top:10px;
+}
+
+.card-text {
+  width: 240px;
+  font-family: var(--ff-secondary);
+  font-size: 1vw;
+  padding:3px;
+}
+
+.card-title{
+  font-family: var(--ff-primary);
+}
+
+
+/* poster  */
+
+.poster {
+  padding-top: 10px;
+  /* padding-bottom: 10px; */
+  padding-left: 40px;
+  padding-right: 250px;
+  max-height: 730px;
+}
+
+.poster-heading{
+  background: black;
+  color: #FFFFFF;
+  padding: .25em 1em;
+  font-family: var(--ff-secondary);
+  margin-bottom: 1em;
+  max-width: 600px;
+}
+
+
+.left-text{
+  padding-top: 40px;
+}
+
+.right {
+  padding-top: 20px;
+  padding-left: 100px;
+  width: 850px;
+  height: 600px;
+}
+
+
+
+
+
+/* skills */
+
+.skills{
+  background-color: var(--clr-accent);
+  height: 600px;
+  padding-top: 65px;
+  padding-left: 320px;
+}
+
+
+/* coursera */
+
+.coursera{
+  background-color: white;
+  height: 500px;
+}
+
+
+
+
+
+/* footer */
+
+.footer {
+  background:var(--clr-accent);
+  color: black;
+  text-align: center;
+  padding: 1em 0;
+  font-size: var(--fs-h3);
+
+}
+
+.footer a { 
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer__link {
+  font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+  opacity: .7;
+}
+
+.footer__link:hover {
+  text-decoration: underline;
+}
+
+.social-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0.6em 0 0;
+  padding: 0;
+}
+
+.social-list__item {
+  margin: 0 .5em;
+}
+
+.social-list__link {
+  padding: .5em;
+}
+
