--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ h3 { font-size: var(--fs-h3)}
   padding-bottom: 50px;
   padding-left: 100px;
   padding-right: 100px;
-  margin-bottom: 70px;
+  /* margin-bottom: 70px; */
 }
 
 /* @media (max-width: 1300px) {
@@ -353,11 +353,78 @@ h3 { font-size: var(--fs-h3)}
   width: 240px;
   font-family: var(--ff-secondary);
   font-size: 1vw;
-  padding:3px;
+  padding:10px;
+  margin-bottom: 0px;
 }
 
 .card-title{
   font-family: var(--ff-primary);
+}
+
+@media (min-width: 1450px){
+  .flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    /* border: 1px solid black; */
+    perspective: 1000px; 
+  }
+  
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
+  
+  }
+  
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+    width: 300px;
+    height: 300px;
+  }
+  
+  
+  .flip-card-back {
+    background-color: white;
+    color: black;
+    transform: rotateY(180deg);
+    width: 300px;
+    height: 300px;
+    padding-top:10px;
+  }
+  
+  .card-text {
+    width: 300px;
+    font-family: var(--ff-secondary);
+    font-size: 1vw;
+    padding:6px;
+  }
+  
+  .card-title{
+    font-family: var(--ff-primary);
+  }
+  
+
 }
 
 
@@ -369,39 +436,59 @@ h3 { font-size: var(--fs-h3)}
   color: #FFFFFF;
   padding: .25em 1em;
   font-family: var(--ff-secondary);
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   max-width: 600px;
+  margin-top: 0px;
 }
+
+.poster {
+  margin-top: 0px;
+  padding-top: 100px;
+
+}
+
+
+@media (max-width: 750px){
+  .right{
+    display: none;
+  }
+  .myposter {
+    display: none;
+  }
+}
+
+
 
 @media (min-width: 1450px) {
 
 .poster {
-  padding-top: 10px;
+  /* padding-top: 10px; */
   /* padding-bottom: 10px; */
-  padding-left: 40px;
-  padding-right: 250px;
-  max-height: 730px;
+  padding-left: 60px;
+  padding-right: 60px;
+  margin-bottom: 0px;
+  max-height: 1600px;
+  /* height: 970px; */
 }
 
 .left-text{
-  padding-top: 40px;
+  padding-top: 20px;
 }
 
 .right {
-  padding-top: 20px;
-  padding-left: 100px;
-  width: 850px;
-  height: 600px;
+  padding-top: 10px;
+  padding-left: 30px;
+  width: 1400px;
+  height: 1500px;
 }
 
 .myposter {
   max-width: 100%;
-  height: auto;
+  max-height: 100%;
 }
 
+
 }
-
-
 
 
 /* skills */
@@ -416,12 +503,77 @@ h3 { font-size: var(--fs-h3)}
 
 /* coursera */
 
+
+
+
+  .coursera{
+    background-color: white;
+    /* height: 700px; */
+    height: auto;
+  }
+  
+  .cert-heading{
+    background: black;
+    color: #FFFFFF;
+    padding: .25em 1em;
+    font-family: var(--ff-secondary);
+    margin-bottom: 2em;
+    max-width: 364px;
+    margin-top: 0px;
+  }
+
+  .right {
+   width: 100%;
+   height: auto;
+  }
+  
+  .carousel-inner {
+    width: 100%;
+    height: auto;
+  }
+  
+  
+  .carousel-indicators {
+    bottom: -10px;
+    /* justify-content:center; */
+    margin:0;
+    padding-left:15px;
+    padding-right:15px;
+  }
+  
+  .carousel .carousel-indicators li {  background-color: gray; }
+  .carousel .carousel-indicators li.active { background-color: rgb(228, 189, 15) }
+  
+  
+  .carousel-item.active{
+    width: 95%;
+    height: 95%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  
+  /*---Firefox Bug Fix --*/
+  .carousel-item {
+    transition: -webkit-transform 0.5s ease;
+    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+    -webkit-backface-visibility: visible;
+    backface-visibility: visible;
+  }
+  
+
+
+
+
+
+
 @media (min-width: 1450px) {
 
 
 .coursera{
   background-color: white;
-  height: 500px;
+  height: 860px;
 }
 
 .right {
@@ -441,15 +593,15 @@ h3 { font-size: var(--fs-h3)}
 
 
 .carousel-indicators {
-  top: 10px;
-  justify-content:center;
+  bottom: -10px;
+  /* justify-content:center; */
   margin:0;
   padding-left:15px;
   padding-right:15px;
 }
 
 .carousel .carousel-indicators li {  background-color: gray; }
-.carousel .carousel-indicators li.active { background-color: goldenrod; }
+.carousel .carousel-indicators li.active { background-color: rgb(228, 189, 15)}
 
 
 .carousel-item.active{
