--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,17 @@ h3 { font-size: var(--fs-h3)}
   margin-bottom: 0px;
 }
 
+@media (max-width: 1100px){
+  .card-text {
+  width: 240px;
+  font-family: var(--ff-secondary);
+  font-size: 80%; 
+  padding:10px;
+  margin-bottom: 0px;
+  }
+}
+
+
 .card-title{
   font-family: var(--ff-primary);
 }
